Fix vertical scroll overflow issue
Updated 'overflow-y' style from 'hidden' to default('auto')

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     font-family: 'Roboto',
         'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
         'Helvetica Neue', sans-serif;
@@ -23,7 +23,7 @@ code {
     overflow: hidden;
 }
 .app{
-    overflow: hidden;
+    overflow-x: hidden;
     height: 100vh;
     background-color: #E8F1FE;
     
